[package]
name = "untitled-project-24687496807"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
beacon-api-client = { git = "https://github.com/ralexstokes/ethereum-consensus.git" }
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus.git" }
alloy = { version = "0.1", features = [
    "full",
    "node-bindings",
    "rpc-types-debug",
    "rpc-types-trace",
    "json-rpc",
    "rpc-client",
    "rpc-types",
    "signer-aws",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
] }
futures-util = "0.3"
eyre = "0.6.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
hex = {}
url = {}
